fixed update button z-index causing other buttons to not receive click events

--- a/style.css
+++ b/style.css
@@ -229,6 +229,8 @@ cursor: pointer; cursor: hand;
     border-radius: 10px;
     top: 50%;
     right: 18%;
+    z-index: 100;
+
 }
 
 #update_div {
@@ -237,6 +239,7 @@ top: 0;
 left: 0;
 height: 100%;
 width: 100%;
+z-index: -100;
 }
 
 /************ Overall Containers ********************/
